updated version numbers and fixed bug where layoutblocks could stack

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,7 +1,10 @@
-SpacePlanner
+SpacePlanner by Steve Phillips (kingcoyote)
+===============================================================================
 
----------------------------------------------------------------------------------------------------
-Version: 0.0.1
-Date: development
+0.0.2 (development)
+-------------------------------------------------------------------------------
+
+0.0.1 (2018-03-05)
+-------------------------------------------------------------------------------
 
   Initial concepts
